# tree-sitter-jml

./: .better-commits.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
after/queries/jml/: tags.scm
bindings/c/: tree-sitter-jml.pc.in
bindings/c/tree_sitter/: tree-sitter-jml.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJmlTests/: TreeSitterJmlTests.swift
examples/: comprehensive.jml
plugin/: jml.lua
plugin/tree-sitter-jml/: init.lua
queries/: README.md  highlights.scm  locals.scm
queries/java/: injections.scm
src/: grammar.json  node-types.json  parser.c
