[package]
name = "tree-sitter-jml"
description = "A parser for the Java Modeling Language (JML)"
version = "0.1.0"
authors = ["Jonas Mühlmann <49788305+JonasMuehlmann@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jonasmuehlmann/tree-sitter-jml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
